fix/Asteroid color change, Health Tutorial stuck problem

--- a/styles-cg.css
+++ b/styles-cg.css
@@ -7,8 +7,8 @@
     top: 50%;
     transform: translate(-50%, -50%);
     width: var(--modal-width, 80%);
-    max-width: 700px;
-     height: auto;
+    max-width: 600px;
+    /* height: 95vh; */
     /* Full viewport height */
     background-color: #111;
     border: 3px solid #4e15ac;
@@ -67,11 +67,11 @@
 
 @media only screen and (max-width: 768px) {
     .modal {
-        height: 70vh;
-        margin-top: 4vh;
+        height: 90vh;
     }
+
     #levelUpModal {
-        /*height: auto; !important;*/
+        height: auto; !important;
     }
 }
 
@@ -82,9 +82,9 @@
 /* Adjustments for mobile landscape mode */
 @media only screen and (max-width: 768px) and (orientation: landscape) {
     .modal {
-        height: 70vh !important;
+        height: 90vh;
         /* Full viewport height in landscape mode */
-        width: 80vw;
+        width: 100vw;
         /* Full viewport width */
         max-width: none;
         /* Remove the max-width constraint */
@@ -158,7 +158,9 @@
     font-size: clamp(0.8rem, 1.5vw, 1rem);
     /* Scale the description size */
 }
+#levelUpModal{
 
+}
 /* Ensure buttons are aligned properly and shrink with viewport */
 .modal-content button {
     margin-top: auto;
